SonicOrigins/Uncategorized/C++/ObjectRflParam.h

typedef struct
{
    const char* pValue;
    INSERT_PADDING(8);
}
cstring;
typedef struct
{
    cstring effectName;
    cstring effectNodeName;
    bool follow;
}
EffectInfo;
typedef struct
{
    EffectInfo effectInfo;
    uint32_t frames[2];
}
OneShotEffectInfo;
typedef struct
{
    int32_t dummy;
}
RoundTripObjectRflParam;
typedef struct
{
    cstring model;
    cstring moveAnim;
    cstring waitAnim;
    cstring jumpAnim;
    cstring skeleton;
    float radius;
    EffectInfo effectMoveGrass;
    OneShotEffectInfo effectJumpGrass;
    OneShotEffectInfo effectLandingGrass;
    EffectInfo effectMoveRock;
    OneShotEffectInfo effectJumpRock;
    OneShotEffectInfo effectLandingRock;
    bool isLeaningOnPath;
}
RoundTripObjectResourceRflParam;
typedef struct
{
    int32_t dummy;
}
CommonObjectRflParam;
typedef struct
{
    bool isActive;
    cstring uvAnimNames[2];
}
UVAnimationInfo;
typedef struct
{
    bool isActive;
    cstring visAnimNames;
}
VISAnimationInfo;
typedef struct
{
    cstring model;
    cstring animation;
    cstring skeleton;
    float radius;
    EffectInfo effectInfos[2];
    OneShotEffectInfo oneShotEffectInfos[2];
    UVAnimationInfo loopUVAnimInfo;
    VISAnimationInfo loopVISAnimInfo;
}
CommonObjectResourceRflParam;
typedef struct
{
    CommonObjectResourceRflParam commonObjectResourceRflParam;
    int32_t dummy;
}
ValkyneObjectResourceRflParam;
typedef struct
{
    CommonObjectRflParam commonObjectRflParam;
    ValkyneObjectResourceRflParam valkyneObjectResourceParam;
}
ValkyneObjectRflParam;
typedef struct
{
    int32_t dummy;
}
SkyObjectRflParam;
typedef struct
{
    cstring model;
    cstring animation;
    cstring skeleton;
    float radius;
}
SkyObjectResourceRflParam;
typedef struct
{
    SkyObjectResourceRflParam skyObjectResourceRflParam;
    int32_t dummy;
}
PatabataObjectResourceRflParam;
typedef struct
{
    SkyObjectRflParam skyObjectRflParam;
    PatabataObjectResourceRflParam patabataObjectResourceParam;
}
PatabataObjectRflParam;
typedef struct
{
    CommonObjectResourceRflParam commonObjectResourceRflParam;
    int32_t dummy;
}
MetalSonicObjectResourceRflParam;
typedef struct
{
    CommonObjectRflParam commonObjectRflParam;
    MetalSonicObjectResourceRflParam metalSonicObjectResourceParam;
}
MetalSonicObjectRflParam;
typedef struct
{
    RoundTripObjectResourceRflParam roundTripObjectResourceRflParam;
    int32_t dummy;
}
AntonObjectResourceRflParam;
typedef struct
{
    RoundTripObjectRflParam roundTripObjectRflParam;
    AntonObjectResourceRflParam antonObjectResourceParam;
}
AntonObjectRflParam;
typedef struct
{
    CommonObjectResourceRflParam commonObjectResourceRflParam;
    int32_t dummy;
}
AiaiObjectResourceRflParam;
typedef struct
{
    CommonObjectRflParam commonObjectRflParam;
    AiaiObjectResourceRflParam aiaiObjectResourceParam;
}
AiaiObjectRflParam;
typedef struct
{
    CommonObjectResourceRflParam commonObjectResourceRflParam;
    int32_t dummy;
}
LanderObjectResourceRflParam;
typedef struct
{
    CommonObjectRflParam commonObjectRflParam;
    LanderObjectResourceRflParam landerObjectResourceParam;
}
LanderObjectRflParam;
typedef struct
{
    int32_t dummy;
}
LinePathObjectRflParam;
typedef struct
{
    cstring model;
    cstring animation;
    cstring skeleton;
    float radius;
    EffectInfo effectInfos[2];
    VISAnimationInfo loopVISAnimInfo;
}
LinePathObjectResourceRflParam;
typedef struct
{
    LinePathObjectResourceRflParam linePathObjectResourceRflParam;
    int32_t dummy;
}
FlickyBlueObjectResourceRflParam;
typedef struct
{
    LinePathObjectRflParam linePathObjectRflParam;
    FlickyBlueObjectResourceRflParam flickyBlueObjectResourceParam;
}
FlickyBlueObjectRflParam;
typedef struct
{
    LinePathObjectResourceRflParam linePathObjectResourceRflParam;
    int32_t dummy;
}
FlickyGreenObjectResourceRflParam;
typedef struct
{
    LinePathObjectRflParam linePathObjectRflParam;
    FlickyGreenObjectResourceRflParam flickyGreenObjectResourceParam;
}
FlickyGreenObjectRflParam;
typedef struct
{
    LinePathObjectResourceRflParam linePathObjectResourceRflParam;
    int32_t dummy;
}
FlickyPinkObjectResourceRflParam;
typedef struct
{
    LinePathObjectRflParam linePathObjectRflParam;
    FlickyPinkObjectResourceRflParam flickyPinkObjectResourceParam;
}
FlickyPinkObjectRflParam;
typedef struct
{
    LinePathObjectResourceRflParam linePathObjectResourceRflParam;
    int32_t dummy;
}
FlickyRedObjectResourceRflParam;
typedef struct
{
    LinePathObjectRflParam linePathObjectRflParam;
    FlickyRedObjectResourceRflParam flickyRedObjectResourceParam;
}
FlickyRedObjectRflParam;
typedef struct
{
    LinePathObjectResourceRflParam linePathObjectResourceRflParam;
    int32_t dummy;
}
WaterSonicObjectResourceRflParam;
typedef struct
{
    LinePathObjectRflParam linePathObjectRflParam;
    WaterSonicObjectResourceRflParam waterSonicObjectResourceParam;
}
WaterSonicObjectRflParam;
typedef struct
{
    LinePathObjectResourceRflParam linePathObjectResourceRflParam;
    int32_t dummy;
}
SuperSonicObjectResourceRflParam;
typedef struct
{
    LinePathObjectRflParam linePathObjectRflParam;
    SuperSonicObjectResourceRflParam superSonicObjectResourceParam;
}
SuperSonicObjectRflParam;
typedef struct
{
    LinePathObjectResourceRflParam linePathObjectResourceRflParam;
    int32_t dummy;
}
FlyingTailsObjectResourceRflParam;
typedef struct
{
    LinePathObjectRflParam linePathObjectRflParam;
    FlyingTailsObjectResourceRflParam flyingTailsObjectResourceParam;
}
FlyingTailsObjectRflParam;
typedef struct
{
    cstring model;
    cstring normalWaitAnim;
    cstring islandAnims[4];
    cstring islandCommonWaitAnimA;
    cstring islandCommonWaitAnimB;
    cstring skeleton;
    UVAnimationInfo islandEyeUVAnimInfos[4];
    UVAnimationInfo islandCommonWaitBEyeUVAnimInfo;
    VISAnimationInfo islandVISAnimInfos[4];
    VISAnimationInfo normalWaitVISAnimInfo;
    VISAnimationInfo islandCommonWaitAVISAnimInfo;
    VISAnimationInfo islandCommonWaitBVISAnimInfo;
    float radius;
}
IslandCommonSonicObjectResourceRflParam;
typedef struct
{
    IslandCommonSonicObjectResourceRflParam islandCommonSonicObjectResourceParam;
}
IslandCommonSonicObjectRflParam;
typedef struct
{
    CommonObjectResourceRflParam commonObjectResourceRflParam;
    int32_t dummy;
}
IslandW2SonicObjectResourceRflParam;
typedef struct
{
    CommonObjectRflParam commonObjectRflParam;
    IslandW2SonicObjectResourceRflParam islandW2SonicObjectResourceParam;
}
IslandW2SonicObjectRflParam;
typedef struct
{
    cstring sonicModel;
    cstring sonicAnim;
    cstring sonicAnimR;
    cstring sonicAnimSwitch;
    cstring sonicAnimSwitchR;
    cstring sonicSkeleton;
    cstring drumModel;
    cstring drumAnim;
    cstring drumAnimR;
    cstring drumAnimSwitch;
    cstring drumAnimSwitchR;
    cstring drumSkeleton;
    OneShotEffectInfo effectDrum;
    OneShotEffectInfo effectDrumR;
    VISAnimationInfo loopVISAnimInfo;
    VISAnimationInfo loopVISAnimInfoR;
    VISAnimationInfo switchVISAnimInfo;
    VISAnimationInfo switchVISAnimInfoR;
    float radius;
}
IslandW5SonicObjectResourceRflParam;
typedef struct
{
    IslandW5SonicObjectResourceRflParam islandW5SonicObjectResourceParam;
}
IslandW5SonicObjectRflParam;