SonicOrigins/Uncategorized/C#/ObjectRflParam.cs


    [StructLayout(LayoutKind.Explicit, Size = 312)]
    public struct ValkyneObjectRflParam
    {
        [FieldOffset(0)] public CommonObjectRflParam commonObjectRflParam;
        [FieldOffset(8)] public ValkyneObjectResourceRflParam valkyneObjectResourceParam;
    }

    [StructLayout(LayoutKind.Explicit, Size = 4)]
    public struct SkyObjectRflParam
    {
        [FieldOffset(0)] public int dummy;
    }

    [StructLayout(LayoutKind.Explicit, Size = 56)]
    public struct SkyObjectResourceRflParam
    {
        [FieldOffset(0)]  public CString model;
        [FieldOffset(16)] public CString animation;
        [FieldOffset(32)] public CString skeleton;
        [FieldOffset(48)] public float radius;
    }

    [StructLayout(LayoutKind.Explicit, Size = 64)]
    public struct PatabataObjectResourceRflParam
    {
        [FieldOffset(0)]  public SkyObjectResourceRflParam skyObjectResourceRflParam;
        [FieldOffset(56)] public int dummy;
    }

    [StructLayout(LayoutKind.Explicit, Size = 72)]
    public struct PatabataObjectRflParam
    {
        [FieldOffset(0)] public SkyObjectRflParam skyObjectRflParam;
        [FieldOffset(8)] public PatabataObjectResourceRflParam patabataObjectResourceParam;
    }

    [StructLayout(LayoutKind.Explicit, Size = 304)]
    public struct MetalSonicObjectResourceRflParam
    {
        [FieldOffset(0)]   public CommonObjectResourceRflParam commonObjectResourceRflParam;
        [FieldOffset(296)] public int dummy;
    }

    [StructLayout(LayoutKind.Explicit, Size = 312)]
    public struct MetalSonicObjectRflParam
    {
        [FieldOffset(0)] public CommonObjectRflParam commonObjectRflParam;
        [FieldOffset(8)] public MetalSonicObjectResourceRflParam metalSonicObjectResourceParam;
    }

    [StructLayout(LayoutKind.Explicit, Size = 376)]
    public struct AntonObjectResourceRflParam
    {
        [FieldOffset(0)]   public RoundTripObjectResourceRflParam roundTripObjectResourceRflParam;
        [FieldOffset(368)] public int dummy;
    }

    [StructLayout(LayoutKind.Explicit, Size = 384)]
    public struct AntonObjectRflParam
    {
        [FieldOffset(0)] public RoundTripObjectRflParam roundTripObjectRflParam;
        [FieldOffset(8)] public AntonObjectResourceRflParam antonObjectResourceParam;
    }

    [StructLayout(LayoutKind.Explicit, Size = 304)]
    public struct AiaiObjectResourceRflParam
    {
        [FieldOffset(0)]   public CommonObjectResourceRflParam commonObjectResourceRflParam;
        [FieldOffset(296)] public int dummy;
    }

    [StructLayout(LayoutKind.Explicit, Size = 312)]
    public struct AiaiObjectRflParam
    {
        [FieldOffset(0)] public CommonObjectRflParam commonObjectRflParam;
        [FieldOffset(8)] public AiaiObjectResourceRflParam aiaiObjectResourceParam;
    }

    [StructLayout(LayoutKind.Explicit, Size = 304)]
    public struct LanderObjectResourceRflParam
    {
        [FieldOffset(0)]   public CommonObjectResourceRflParam commonObjectResourceRflParam;
        [FieldOffset(296)] public int dummy;
    }

    [StructLayout(LayoutKind.Explicit, Size = 312)]
    public struct LanderObjectRflParam
    {
        [FieldOffset(0)] public CommonObjectRflParam commonObjectRflParam;
        [FieldOffset(8)] public LanderObjectResourceRflParam landerObjectResourceParam;
    }

    [StructLayout(LayoutKind.Explicit, Size = 4)]
    public struct LinePathObjectRflParam
    {
        [FieldOffset(0)] public int dummy;
    }

    [StructLayout(LayoutKind.Explicit, Size = 160)]
    public struct LinePathObjectResourceRflParam
    {
        [FieldOffset(0)]   public CString model;
        [FieldOffset(16)]  public CString animation;
        [FieldOffset(32)]  public CString skeleton;
        [FieldOffset(48)]  public float radius;
        [FieldOffset(56)]  public EffectInfo effectInfos__arr0;
        [FieldOffset(96)] public EffectInfo effectInfos__arr1;
        [FieldOffset(136)] public VISAnimationInfo loopVISAnimInfo;
    }

    [StructLayout(LayoutKind.Explicit, Size = 168)]
    public struct FlickyBlueObjectResourceRflParam
    {
        [FieldOffset(0)]   public LinePathObjectResourceRflParam linePathObjectResourceRflParam;
        [FieldOffset(160)] public int dummy;
    }

    [StructLayout(LayoutKind.Explicit, Size = 176)]
    public struct FlickyBlueObjectRflParam
    {
        [FieldOffset(0)] public LinePathObjectRflParam linePathObjectRflParam;
        [FieldOffset(8)] public FlickyBlueObjectResourceRflParam flickyBlueObjectResourceParam;
    }

    [StructLayout(LayoutKind.Explicit, Size = 168)]
    public struct FlickyGreenObjectResourceRflParam
    {
        [FieldOffset(0)]   public LinePathObjectResourceRflParam linePathObjectResourceRflParam;
        [FieldOffset(160)] public int dummy;
    }

    [StructLayout(LayoutKind.Explicit, Size = 176)]
    public struct FlickyGreenObjectRflParam
    {
        [FieldOffset(0)] public LinePathObjectRflParam linePathObjectRflParam;
        [FieldOffset(8)] public FlickyGreenObjectResourceRflParam flickyGreenObjectResourceParam;
    }

    [StructLayout(LayoutKind.Explicit, Size = 168)]
    public struct FlickyPinkObjectResourceRflParam
    {
        [FieldOffset(0)]   public LinePathObjectResourceRflParam linePathObjectResourceRflParam;
        [FieldOffset(160)] public int dummy;
    }

    [StructLayout(LayoutKind.Explicit, Size = 176)]
    public struct FlickyPinkObjectRflParam
    {
        [FieldOffset(0)] public LinePathObjectRflParam linePathObjectRflParam;
        [FieldOffset(8)] public FlickyPinkObjectResourceRflParam flickyPinkObjectResourceParam;
    }

    [StructLayout(LayoutKind.Explicit, Size = 168)]
    public struct FlickyRedObjectResourceRflParam
    {
        [FieldOffset(0)]   public LinePathObjectResourceRflParam linePathObjectResourceRflParam;
        [FieldOffset(160)] public int dummy;
    }

    [StructLayout(LayoutKind.Explicit, Size = 176)]
    public struct FlickyRedObjectRflParam
    {
        [FieldOffset(0)] public LinePathObjectRflParam linePathObjectRflParam;
        [FieldOffset(8)] public FlickyRedObjectResourceRflParam flickyRedObjectResourceParam;
    }

    [StructLayout(LayoutKind.Explicit, Size = 168)]
    public struct WaterSonicObjectResourceRflParam
    {
        [FieldOffset(0)]   public LinePathObjectResourceRflParam linePathObjectResourceRflParam;
        [FieldOffset(160)] public int dummy;
    }

    [StructLayout(LayoutKind.Explicit, Size = 176)]
    public struct WaterSonicObjectRflParam
    {
        [FieldOffset(0)] public LinePathObjectRflParam linePathObjectRflParam;
        [FieldOffset(8)] public WaterSonicObjectResourceRflParam waterSonicObjectResourceParam;
    }

    [StructLayout(LayoutKind.Explicit, Size = 168)]
    public struct SuperSonicObjectResourceRflParam
    {
        [FieldOffset(0)]   public LinePathObjectResourceRflParam linePathObjectResourceRflParam;
        [FieldOffset(160)] public int dummy;
    }

    [StructLayout(LayoutKind.Explicit, Size = 176)]
    public struct SuperSonicObjectRflParam
    {
        [FieldOffset(0)] public LinePathObjectRflParam linePathObjectRflParam;
        [FieldOffset(8)] public SuperSonicObjectResourceRflParam superSonicObjectResourceParam;
    }

    [StructLayout(LayoutKind.Explicit, Size = 168)]
    public struct FlyingTailsObjectResourceRflParam
    {
        [FieldOffset(0)]   public LinePathObjectResourceRflParam linePathObjectResourceRflParam;
        [FieldOffset(160)] public int dummy;
    }

    [StructLayout(LayoutKind.Explicit, Size = 176)]
    public struct FlyingTailsObjectRflParam
    {
        [FieldOffset(0)] public LinePathObjectRflParam linePathObjectRflParam;
        [FieldOffset(8)] public FlyingTailsObjectResourceRflParam flyingTailsObjectResourceParam;
    }

    [StructLayout(LayoutKind.Explicit, Size = 520)]
    public struct IslandCommonSonicObjectResourceRflParam
    {
        [FieldOffset(0)]   public CString model;
        [FieldOffset(16)]  public CString normalWaitAnim;
        [FieldOffset(32)]  public CString islandAnims__arr0;
        [FieldOffset(287)] public CString islandAnims__arr1;
        [FieldOffset(542)] public CString islandAnims__arr2;
        [FieldOffset(797)] public CString islandAnims__arr3;
        [FieldOffset(96)]  public CString islandCommonWaitAnimA;
        [FieldOffset(112)] public CString islandCommonWaitAnimB;
        [FieldOffset(128)] public CString skeleton;
        [FieldOffset(144)] public UVAnimationInfo islandEyeUVAnimInfos__arr0;
        [FieldOffset(184)] public UVAnimationInfo islandEyeUVAnimInfos__arr1;
        [FieldOffset(224)] public UVAnimationInfo islandEyeUVAnimInfos__arr2;
        [FieldOffset(264)] public UVAnimationInfo islandEyeUVAnimInfos__arr3;
        [FieldOffset(304)] public UVAnimationInfo islandCommonWaitBEyeUVAnimInfo;
        [FieldOffset(344)] public VISAnimationInfo islandVISAnimInfos__arr0;
        [FieldOffset(368)] public VISAnimationInfo islandVISAnimInfos__arr1;
        [FieldOffset(392)] public VISAnimationInfo islandVISAnimInfos__arr2;
        [FieldOffset(416)] public VISAnimationInfo islandVISAnimInfos__arr3;
        [FieldOffset(440)] public VISAnimationInfo normalWaitVISAnimInfo;
        [FieldOffset(464)] public VISAnimationInfo islandCommonWaitAVISAnimInfo;
        [FieldOffset(488)] public VISAnimationInfo islandCommonWaitBVISAnimInfo;
        [FieldOffset(512)] public float radius;
    }

    [StructLayout(LayoutKind.Explicit, Size = 520)]
    public struct IslandCommonSonicObjectRflParam
    {
        [FieldOffset(0)] public IslandCommonSonicObjectResourceRflParam islandCommonSonicObjectResourceParam;
    }

    [StructLayout(LayoutKind.Explicit, Size = 304)]
    public struct IslandW2SonicObjectResourceRflParam
    {
        [FieldOffset(0)]   public CommonObjectResourceRflParam commonObjectResourceRflParam;
        [FieldOffset(296)] public int dummy;
    }

    [StructLayout(LayoutKind.Explicit, Size = 312)]
    public struct IslandW2SonicObjectRflParam
    {
        [FieldOffset(0)] public CommonObjectRflParam commonObjectRflParam;
        [FieldOffset(8)] public IslandW2SonicObjectResourceRflParam islandW2SonicObjectResourceParam;
    }

    [StructLayout(LayoutKind.Explicit, Size = 392)]
    public struct IslandW5SonicObjectResourceRflParam
    {
        [FieldOffset(0)]   public CString sonicModel;
        [FieldOffset(16)]  public CString sonicAnim;
        [FieldOffset(32)]  public CString sonicAnimR;
        [FieldOffset(48)]  public CString sonicAnimSwitch;
        [FieldOffset(64)]  public CString sonicAnimSwitchR;
        [FieldOffset(80)]  public CString sonicSkeleton;
        [FieldOffset(96)]  public CString drumModel;
        [FieldOffset(112)] public CString drumAnim;
        [FieldOffset(128)] public CString drumAnimR;
        [FieldOffset(144)] public CString drumAnimSwitch;
        [FieldOffset(160)] public CString drumAnimSwitchR;
        [FieldOffset(176)] public CString drumSkeleton;
        [FieldOffset(192)] public OneShotEffectInfo effectDrum;
        [FieldOffset(240)] public OneShotEffectInfo effectDrumR;
        [FieldOffset(288)] public VISAnimationInfo loopVISAnimInfo;
        [FieldOffset(312)] public VISAnimationInfo loopVISAnimInfoR;
        [FieldOffset(336)] public VISAnimationInfo switchVISAnimInfo;
        [FieldOffset(360)] public VISAnimationInfo switchVISAnimInfoR;
        [FieldOffset(384)] public float radius;
    }

    [StructLayout(LayoutKind.Explicit, Size = 392)]
    public struct IslandW5SonicObjectRflParam
    {
        [FieldOffset(0)] public IslandW5SonicObjectResourceRflParam islandW5SonicObjectResourceParam;
    }
